Converted to use java.util.Base64.